Creato con Colaboratory

--- a/progetto.ipynb
+++ b/progetto.ipynb
@@ -42,7 +42,7 @@
         "id": "966a0b91"
       },
       "source": [
-        "#ciao fra oooo"
+        "#ciao fra oooo ooooo"
       ],
       "id": "966a0b91"
     }
